test/functions/dinan/inconsistent_return_type.good
inconsistent_return_type.chpl:1: error: unable to resolve return type
